Created the context class MongoDbContext

--- a/v3/appsettings.json
+++ b/v3/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DbConnection": "mongodb://localhost/v3"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
